Update index.html to use client_list_updated.csv with Cloud 9 locations

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             }
         });
 
-        Papa.parse("client_list.csv", {
+        Papa.parse("client_list_updated.csv", {
             delimiter: ",",
             header:true,
             download: true,
